tests/errors/semantic/blocking/TYPE_ALIAS_REASSIGN.py
# Variable 'MyType' represents a symbolic concept. Its value cannot be changed.
# pylint: disable=missing-function-docstring, missing-module-docstring
from typing import TypeAlias

MyType : TypeAlias = int

MyType = float
